--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
 цвет основ текста #757575, #*/
 
 /* main */
+/* *,
+*::before,
+*::after {
+    box-sizing: border-box;
+} */
+
 body {
     background-color: #ffffff;
     color: #757575;
@@ -13,9 +19,23 @@ body {
 
 .list {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h2 {
+    margin-bottom: 50px;
+}
 /* Стилизация лого */
+
 .logo {
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
@@ -23,6 +43,7 @@ body {
     font-size: 26px;
     letter-spacing: 0.03em;
     color: #2196F3;
+    padding-right: 94px;
 }
 
 .logo-header {
@@ -34,12 +55,33 @@ body {
 }
 
 /* Header */
+
+.header-menu {
+    display: flex;
+}
+
+.header-contacts {
+    display: flex;
+}
+.site-nav li:not(:last-child) {
+     margin-right: 50px;
+
+}
+.main-nav {
+    display: flex;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    align-items: center;
+}
 .link-nav {
+    display: block;
+
     text-decoration: none;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+
     color: #212121;
 }
 
@@ -55,20 +97,32 @@ body {
     letter-spacing: 0.02em;
     color: #757575;
     text-decoration: none;
+    margin-left: auto;
 }
 
+.div-contacts {
+    margin-left: auto;
+    margin-right: 0;
+}
 /* Основна частина */
 .main-section {
     background-color: #2F303A;
     text-align: center;
+    height: 600px;
 }
+
 .main-text {
-    text-align: center;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
+    width: 700px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    padding-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-top: 0;
     color: #FFFFFF;
 }
 
@@ -78,11 +132,24 @@ body {
     padding: 15px 32px;
     border-radius: 4px;
     border: none;
+    margin-top: 30px;
+    margin-bottom: 0;
     background-color: #2196F3;
     color: #ffffff;
 }
 
 /* Перелік послуг */
+
+.list-services>item {
+    display: block;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.list-services {
+    margin-top: 94px;
+    display: flex;
+}
+
 .list-services h3 {
     font-weight: 700;
     font-size: 14px;
@@ -90,15 +157,20 @@ body {
     letter-spacing: 0.03em;
     color: #212121;
     text-transform: uppercase;
+    margin-top: 0;
 }
 
 .list-services p {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1;
+    line-height: 1.7;
     letter-spacing: 0.03em;
+    margin-bottom: 0;
 }
 
+.list-services p:not(:last-child) {
+    margin-right: 30px;
+}
 /* Перелік послуг-фото */
 .section-title {
     font-weight: 700;
@@ -106,18 +178,18 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
+    padding-top: 94px;
+}
+.img-margin {
+    margin-bottom: 94px;
+    display: flex;
+
 }
 
 /* Команда */
 .section-team {
     background-color: #F5F4FA;
-}
-
-.team-job p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+    padding-bottom: 94px;
 }
 
 .team-job h3 {
@@ -128,10 +200,23 @@ body {
     color: #212121;
 }
 
+.team-job p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-bottom: 0;
+}
+
+.team-job item {
+    display: flex;
+}
 /* Нижня частина */
 
 .footer {
     background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-address {
@@ -140,8 +225,8 @@ body {
     font-size: 14px;
     letter-spacing: 0.03em;
     line-height: 1.71;
-    color: #FFFFFF
-
+    color: #FFFFFF;
+    padding-top: 20px;
 }
 
 .link-footer {
@@ -150,12 +235,19 @@ body {
     font-size: 14px;
     letter-spacing: 0.03em;
     line-height: 1.71;
-    color: rgba(255, 255, 255, 0.6)
+    color: rgba(255, 255, 255, 0.6);
+    padding-top: 9px;
 }
 
 /* Portfolio page */
 
 /* Buttons */
+.nav-decor {
+    border-bottom: 1px solid #EEEEEE;
+}
+.header-border {
+    border: 2px;
+}
 .btn-list {
     text-align: center;
     letter-spacing: 0.03em;
@@ -164,6 +256,8 @@ body {
     justify-content: center;
     gap: 8px;
     line-height: 1.62;
+    margin-top: 94px;
+    margin-bottom: 50px;
 }
 
 .list button {
@@ -188,13 +282,27 @@ body {
 }
 
 /* Portfolio list */
+.portfolio-container {
+    margin-bottom: 94px;
+}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.portfolio-decor {
+    border: 1px solid #EEEEEE;
+    margin-bottom: 30px;
+}
 .portfolio-list h3 {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: #212121;
+    padding-left: 24px;
+    margin-bottom: 9px;
 }
 
 .portfolio-list p {
@@ -203,4 +311,7 @@ body {
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: #757575;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    margin-top: 0;
 }
