--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,10 @@ h2 {
 }
 
 /* Header */
-
+.header {
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
 .header-menu {
     display: flex;
 }
@@ -72,8 +75,6 @@ h2 {
 
 .main-nav {
     display: flex;
-    margin-top: 24px;
-    margin-bottom: 24px;
     align-items: center;
 }
 
@@ -114,6 +115,7 @@ h2 {
     background-color: #2F303A;
     text-align: center;
     height: 600px;
+    padding-top: 200px;
 }
 
 .main-text {
@@ -123,7 +125,6 @@ h2 {
     width: 700px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    padding-top: 200px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
@@ -144,6 +145,9 @@ h2 {
 }
 
 /* Перелік послуг */
+.section-services {
+    margin-top: 94px;
+}
 
 .list-services>item {
     display: block;
@@ -152,7 +156,6 @@ h2 {
 }
 
 .list-services {
-    margin-top: 94px;
     display: flex;
     justify-content: space-between;
 }
@@ -181,6 +184,10 @@ h2 {
 }
 
 /* Перелік послуг-фото */
+.section-services {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 .img-margin {
     justify-content: space-between;
@@ -192,17 +199,16 @@ h2 {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    padding-top: 94px;
     margin-top: 0;
 }
 
 .img-margin {
-    margin-bottom: 94px;
     display: flex;
 
 }
 
 /* Команда */
+
 .flex-item {
     display: flex;
     justify-content: space-between;
@@ -226,13 +232,16 @@ h2 {
     display: flex;
 }
 
+.team-names {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 .team-job h3 {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #212121;
-    padding-top: 30px;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -243,7 +252,6 @@ h2 {
     line-height: 1.19;
     letter-spacing: 0.03em;
     margin-bottom: 0;
-    padding-bottom: 30px;
 }
 
 .team-job item {
@@ -265,7 +273,7 @@ h2 {
     letter-spacing: 0.03em;
     line-height: 1.71;
     color: #FFFFFF;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 .link-footer {
@@ -275,10 +283,14 @@ h2 {
     letter-spacing: 0.03em;
     line-height: 1.71;
     color: rgba(255, 255, 255, 0.6);
-    padding-top: 9px;
+    margin-top: 9px;
 }
 
 /* Portfolio page */
+.section-portfolio {
+    margin-bottom: 94px; 
+    margin-top: 94px; 
+}
 
 /* Buttons */
 .nav-decor {
@@ -297,7 +309,6 @@ h2 {
     justify-content: center;
     gap: 8px;
     line-height: 1.62;
-    margin-top: 94px;
     margin-bottom: 50px;
 }
 
@@ -323,8 +334,10 @@ h2 {
 }
 
 /* Portfolio list */
-.portfolio-container {
-    margin-bottom: 94px;
+.portf-item {
+    padding-left: 24px;
+    padding-bottom: 20px;
+
 }
 
 .portfolio-list {
@@ -344,7 +357,6 @@ h2 {
     line-height: 2;
     letter-spacing: 0.06em;
     color: #212121;
-    padding-left: 24px;
     margin-bottom: 9px;
 }
 
@@ -354,7 +366,5 @@ h2 {
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: #757575;
-    padding-bottom: 20px;
-    padding-left: 24px;
     margin-top: 0;
 }
