--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ h2 {
 
 .section-mrg {
     padding-top: 94px;
-    padding-bottom: 94px;
 }
 /* Header */
 .header {
@@ -240,6 +239,8 @@ h2 {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #212121;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .team-job p {
@@ -248,6 +249,7 @@ h2 {
     line-height: 1.19;
     letter-spacing: 0.03em;
     margin-bottom: 0;
+    margin-top: 10px;
 }
 
 .team-job item {
@@ -286,8 +288,8 @@ h2 {
 }
 /* Portfolio page */
 .section-portfolio {
-    margin-bottom: 94px; 
-    margin-top: 94px; 
+    padding-bottom: 64px; 
+    padding-top: 94px; 
 }
 
 
@@ -346,12 +348,16 @@ h2 {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .portfolio-decor {
     border: 1px solid #EEEEEE;
+    margin-right: 27px;
     margin-bottom: 30px;
+}
+
+.portfolio-decor:nth-child(3n) {
+    margin-right: 0px;
 }
 
 .portfolio-list h3 {
