--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,9 @@ h2 {
     padding-left: 24px;
     padding-bottom: 20px;
     padding-top: 20px;
-
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
 }
 
 .portfolio-list {
@@ -356,9 +358,9 @@ h2 {
 }
 
 .portfolio-decor {
-    border: 1px solid #EEEEEE;
-    margin-right: 27px;
+    margin-right: 30px;
     margin-bottom: 30px;
+    line-height: 0;
 }
 
 .portfolio-decor:nth-child(3n) {
